# sandBox

./: .gitignore
sandGrains/matrix/: CMakeLists.txt
sandGrains/metaArch/: CMakeLists.txt
sandGrains/metaArch/include/: evaluate.hpp  expression.hpp  grammar.hpp  size.hpp  terminals.hpp
sandGrains/metaArch/src/: main.cpp
